# arrow

./: Cargo.toml  email.txt  log4rs.yaml  products.txt  readme.md
src/: main.rs
