[package]
edition = "2021"
name = "arrow"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
log = "0.4"
log4rs = "1"
reqwest = {version = "0.11", features = ["gzip", "cookies"]}
serde = "1"
serde_derive = "1"
serde_json = {version = "1", default-features = false, features = ["alloc"]}
thirtyfour = "0.28"
tokio = {version = "1", features = ["full"]}
regex="1"

[profile.release]
debug = false
opt-level = 3
